[package]
name = "nianjia"
version = "0.0.1"
edition = "2018"
authors = ["Pengfei Zhang <zpfalpc23@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://nianjia.dev"
repository = "https://github.com/nianjia/nianjia"
documentation = "https://docs.rs/nianjia"
description = """
Nianjia, sandboxing environment for next generation computation
"""

[lib]
name = "nianjia"
path = "src/lib.rs"

[dependencies]
failure = "0.1.5"
env_logger = "0.6.0"
pretty_env_logger = { version = "0.3", optional = true }
termcolor = "1.0"
clap = "2.31.2"
log = "0.4.6"
atty = "0.2"
error-chain = "0.12.0"

[[bin]]
name = "nianjia"
path = "bin/main.rs"
test = false
doc = false

[features]
pretty-env-logger = ['pretty_env_logger']
