[package]
name = "nianjia"
version = "0.0.1"
edition = "2018"
authors = ["Pengfei Zhang <zpfalpc23@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://nianjia.dev"
repository = "https://github.com/nianjia/nianjia"
documentation = "https://docs.rs/nianjia"
description = """
Nianjia, the Sandboxing Environment for Next Generation Computation
"""

[lib]
name = "nianjia"
path = "src/lib.rs"

[dependencies]
failure = "0.1.5"
env_logger = "0.6.0"
pretty_env_logger = { version = "0.3", optional = true }
termcolor = "1.0"
clap = "2.31.2"
log = "0.4.6"
atty = "0.2"
error-chain = "0.12.0"
git2-curl = "0.9.0"
libc = "0.2"
lazycell = "1.2.0"
jobserver = "0.1.13"
dirs = "1.0.5"
serde = { version = "1.0.82", features = ['derive'] }
toml = "0.5.0"
shell-escape = "0.1.4"

[target.'cfg(windows)'.dependencies]
scopeguard = "1.0.0"
miow = "0.3.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "basetsd",
  "handleapi",
  "jobapi",
  "jobapi2",
  "memoryapi",
  "minwindef",
  "ntdef",
  "ntstatus",
  "processenv",
  "processthreadsapi",
  "psapi",
  "synchapi",
  "winerror",
  "winbase",
  "wincon",
  "winnt",
  "userenv"
]

[[bin]]
name = "nianjia"
test = false
doc = false

[features]
pretty-env-logger = ['pretty_env_logger']
